Bug 451111 - Install button still there after installation
Summary: Install button still there after installation
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: master
Platform: Other Linux
: HI normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
: 453001 453002 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-03-03 23:09 UTC by Nicolas Fella
Modified: 2022-04-27 01:20 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.5
Sentry Crash Report:


Attachments
Install button after installation (167.97 KB, image/png)
2022-03-03 23:09 UTC, Nicolas Fella
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2022-03-03 23:09:05 UTC
STEPS TO REPRODUCE
1. Run plasma-discover appstream://com.github.junrrein.PDFSlicer
2. Click Install button (with Flathub as source)

OBSERVED RESULT
App installs fine, but the install button is still there, see screenshot


EXPECTED RESULT
The launch button is shown instead of the install button


SOFTWARE/OS VERSIONS
KDE Plasma Version: master
KDE Frameworks Version: master
Qt Version: 5.15-kde

ADDITIONAL INFORMATION
There are two identically looking "Flathub" sources (perhaps user and system?). Switching to the other one and back makes the launch button appear.

The same thing can be observed when uninstalling
Comment 1 Nicolas Fella 2022-03-03 23:09:39 UTC
Created attachment 147268 [details]
Install button after installation
Comment 2 Nate Graham 2022-03-26 15:25:47 UTC
Can reproduce. Also weird that the icon is re-colored to be red. It's like it thinks that it should be a delete button.
Comment 3 Nate Graham 2022-04-25 18:45:57 UTC
*** Bug 453002 has been marked as a duplicate of this bug. ***
Comment 4 Nate Graham 2022-04-26 14:11:16 UTC
*** Bug 453001 has been marked as a duplicate of this bug. ***
Comment 5 Aleix Pol 2022-04-27 01:20:08 UTC
Git commit af01885a1300ec850ad497f96496ecb4985523da by Aleix Pol.
Committed on 27/04/2022 at 01:18.
Pushed by apol into branch 'master'.

flatpak: Fix state change emits

M  +1    -1    libdiscover/backends/FlatpakBackend/FlatpakResource.h

https://invent.kde.org/plasma/discover/commit/af01885a1300ec850ad497f96496ecb4985523da
Comment 6 Aleix Pol 2022-04-27 01:20:25 UTC
Git commit 1c93cc29032ab84834e9c12ec44df1df85811fbd by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 27/04/2022 at 01:20.
Pushed by apol into branch 'Plasma/5.24'.

flatpak: Fix state change emits


(cherry picked from commit af01885a1300ec850ad497f96496ecb4985523da)

M  +1    -1    libdiscover/backends/FlatpakBackend/FlatpakResource.h

https://invent.kde.org/plasma/discover/commit/1c93cc29032ab84834e9c12ec44df1df85811fbd