flatpak: Fix state change emits

BUG: 451111


(cherry picked from commit af01885a1300ec850ad497f96496ecb4985523da)